refactor: update imports to use tools.jackson for ObjectMapper and adjust Spring Boot test annotations